--- a/.env.example
+++ b/.env.example
@@ -2,4 +2,5 @@ STORE_TYPE=file
 STORE_FILE=store.txt
 STORE_URL=http://localhost:5460
 PORT=5460
-LINE_ENDING=\r\n
+LINE_ENDING_GETTING=\r\n
+LINE_ENDING_SAVING=\r\n
