--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,11 @@
+# `file` or `server`
 STORE_TYPE=file
+
+# file mode
 STORE_FILE=store.txt
+
+# server mode
 STORE_URL=http://localhost:5460
 PORT=5460
+
 LINE_ENDING_SAVING=CRLF
